# gprogram-framework

./: Cargo.toml  README.md
contracts/ping-pong/app/: Cargo.toml
contracts/ping-pong/app/src/: lib.rs
contracts/ping-pong/wasm/: Cargo.toml  build.rs
contracts/ping-pong/wasm/src/: lib.rs
contracts/this-that/app/: Cargo.toml
contracts/this-that/app/src/: lib.rs
contracts/this-that/wasm/: Cargo.toml  build.rs
contracts/this-that/wasm/hbs/: composite.hbs  idl.hbs  variant.hbs
contracts/this-that/wasm/src/: lib.rs
macros/: Cargo.toml
macros/core/: Cargo.toml
macros/core/src/: gprogram.rs  handler_parts.rs  handlers.rs  lib.rs  tests.rs
macros/src/: lib.rs
macros/tests/: integration_tests.rs
macros/tests/ui/: async_command_handlers_not_implemented.rs  async_command_handlers_not_implemented.stderr  async_query_handlers_not_supported.rs  async_query_handlers_not_supported.stderr  command_handler_returns_result.rs  command_handler_returns_result.stderr  command_handlers_must_be_inside_gprogram_1.rs  command_handlers_must_be_inside_gprogram_1.stderr  command_handlers_must_be_inside_gprogram_2.rs  command_handlers_must_be_inside_gprogram_2.stderr  gprogram_must_be_inline.rs  gprogram_must_be_inline.stderr  gprogram_works.rs  no_command_handlers.rs  no_command_handlers.stderr  no_query_handlers.rs  no_query_handlers.stderr  play.rs  play.stderr  query_handler_returns_result.rs  query_handler_returns_result.stderr  query_handlers_must_be_inside_gprogram_1.rs  query_handlers_must_be_inside_gprogram_1.stderr  query_handlers_must_be_inside_gprogram_2.rs  query_handlers_must_be_inside_gprogram_2.stderr  single_command_handlers_block.rs  single_command_handlers_block.stderr  single_query_handlers_block.rs  single_query_handlers_block.stderr  sync_command_handlers_work.rs  sync_command_handlers_works.rs  sync_query_handlers_work.rs
