[package]
name = "this-that-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta.workspace = true
gprogram-framework-macros = { path = "../../../macros" }
gstd = { workspace = true, features = ["debug"] }
gsys.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

[features]
"contract-io" = []
